k8s/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ksc-worker
  namespace: ksc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ksc-worker
  template:
    metadata:
      labels:
        app: ksc-worker
    spec:
      containers:
        - name: worker
          image: ghcr.io/IrfanPasha05/KSC:latest
          command: ["python","worker.py"]
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
